--- a/app/src/main/res/layout/billboard_goal.xml
+++ b/app/src/main/res/layout/billboard_goal.xml
@@ -35,8 +35,8 @@
 
                 <TextView
                     android:id="@+id/description"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_width="279dp"
+                    android:layout_height="59dp"
                     android:layout_margin="10dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="15dp"
@@ -65,8 +65,8 @@
 
                 <TextView
                     android:id="@+id/titleGoal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="239dp"
+                    android:layout_height="27dp"
                     android:layout_margin="10dp"
                     android:layout_marginStart="10dp"
                     android:text="@{property.title}"
@@ -76,7 +76,7 @@
                     app:layout_constraintBottom_toTopOf="@+id/description"
                     app:layout_constraintEnd_toStartOf="@+id/button"
                     app:layout_constraintStart_toEndOf="@+id/cardprofile"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="@id/datum" />
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardprofile"
@@ -103,6 +103,30 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
                 </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/naam"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:layout_editor_absoluteX="9dp"
+                    tools:layout_editor_absoluteY="1dp"
+                    android:text="@{property.naam}"
+                    app:layout_constraintEnd_toStartOf="@+id/titleGoal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/cardprofile"/>
+
+                <TextView
+                    android:id="@+id/datum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:layout_editor_absoluteX="300dp"
+                    tools:layout_editor_absoluteY="4dp"
+                    android:text="@{property.date}"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/titleGoal"
+                    app:layout_constraintEnd_toStartOf="@id/button"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
