--- a/app/src/main/res/drawable/ic_avatar_male.xml
+++ b/app/src/main/res/drawable/ic_avatar_male.xml
@@ -1,36 +1,24 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="237.8dp"
-    android:height="744dp"
+    android:height="350dp"
     android:viewportWidth="237.8"
-    android:viewportHeight="744">
+    android:viewportHeight="350">
   <path
-      android:name="Skin"
+      android:name="Skin1"
       android:pathData="M234.23,359.62c3.64,-28.4 6.46,-50 -1.82,-77.21 -1.81,-24.62 2.78,-44 -4.49,-70.49 7.27,-34.08 -20,-58.69 -30.9,-60.59S173.6,147.55 160.87,140s-18.17,-13.25 -18.17,-39.76L95.37,100.24c0,26.51 -5.45,32.19 -18.18,39.76S52,149.44 41,151.33s-38.17,26.51 -30.9,60.59c-7.27,26.51 -2.67,42.87 -4.49,67.49C-3.3,307.72 0.2,331.22 3.83,359.62c1.68,13.14 1.86,44.19 1.86,44.19C5.3,433.52 -4,438.25 2.48,450.5S19.21,473.2 29.17,465c-0.45,-3.85 4.87,-3.51 4.56,-5.63s-3.28,-1.43 -2.86,-3.34 -2.34,-2.17 -2.31,-3.13 1.73,-21.45 0.89,-28c-0.67,-5.17 -6,-10 -4.16,-24.85 0,0 3.59,-40.92 7.52,-69.59 1.82,-13.26 3.64,-28.41 3.64,-39.77 6.06,-12.61 4.28,-48.28 11.76,-58 32.72,64.38 -27.26,202.61 3.64,320 -7.27,28.4 0,34.08 0,34.08C26.4,624.71 55.48,744 55.48,744L75.37,744c9.09,-58.7 7.28,-72 7.28,-72S95.37,647.43 84.46,602c16.36,-32.19 32.72,-149.59 32.72,-157.16h3.7c0,7.57 16.36,125 32.72,157.16 -10.9,45.44 1.82,70.06 1.82,70.06s-1.82,13.25 7.27,72h19.89s29.08,-119.29 3.64,-157.16c0,0 7.27,-5.68 0,-34.08 30.9,-117.4 -29.08,-255.63 3.63,-320 7.48,9.74 5.06,48.41 11.77,61 0,11.36 1.81,26.51 3.63,39.77 3.93,28.67 7.27,45.55 7.27,66.37 1.85,14.91 -3.48,19.68 -4.16,24.85 -0.84,6.52 0.87,27 0.9,28s-2.73,1.22 -2.32,3.13 -2.54,1.22 -2.86,3.34 5,1.78 4.56,5.62c10,8.17 20.19,-2.27 26.69,-14.53s-2.53,-16.88 -2.92,-46.59C232.41,403.7 232.55,372.76 234.23,359.62ZM15.71,444.62c0.27,-5.4 2.25,-7.31 3.25,-7.93a0.42,0.42 0,0 1,0.65 0.32l2.24,18.34S15.34,451.94 15.71,444.66ZM216,455.18l2.24,-18.35a0.43,0.43 0,0 1,0.65 -0.32c1,0.63 3,2.54 3.25,7.94C222.47,451.72 216,455.18 216,455.18Z"
       android:fillColor="#F9B77D"/>
-  <group>
-    <clip-path
-        android:pathData="M234.23,359.62c3.64,-28.4 6.46,-50 -1.82,-77.21 -1.81,-24.62 2.78,-44 -4.49,-70.49 7.27,-34.08 -20,-58.69 -30.9,-60.59S173.6,147.55 160.87,140s-18.17,-13.25 -18.17,-39.76L95.37,100.24c0,26.51 -5.45,32.19 -18.18,39.76S52,149.44 41,151.33s-38.17,26.51 -30.9,60.59c-7.27,26.51 -2.67,42.87 -4.49,67.49C-3.3,307.72 0.2,331.22 3.83,359.62c1.68,13.14 1.86,44.19 1.86,44.19C5.3,433.52 -4,438.25 2.48,450.5S19.21,473.2 29.17,465c-0.45,-3.85 4.87,-3.51 4.56,-5.63s-3.28,-1.43 -2.86,-3.34 -2.34,-2.17 -2.31,-3.13 1.73,-21.45 0.89,-28c-0.67,-5.17 -6,-10 -4.16,-24.85 0,0 3.59,-40.92 7.52,-69.59 1.82,-13.26 3.64,-28.41 3.64,-39.77 6.06,-12.61 4.28,-48.28 11.76,-58 32.72,64.38 -27.26,202.61 3.64,320 -7.27,28.4 0,34.08 0,34.08C26.4,624.71 55.48,744 55.48,744L75.37,744c9.09,-58.7 7.28,-72 7.28,-72S95.37,647.43 84.46,602c16.36,-32.19 32.72,-149.59 32.72,-157.16h3.7c0,7.57 16.36,125 32.72,157.16 -10.9,45.44 1.82,70.06 1.82,70.06s-1.82,13.25 7.27,72h19.89s29.08,-119.29 3.64,-157.16c0,0 7.27,-5.68 0,-34.08 30.9,-117.4 -29.08,-255.63 3.63,-320 7.48,9.74 5.06,48.41 11.77,61 0,11.36 1.81,26.51 3.63,39.77 3.93,28.67 7.27,45.55 7.27,66.37 1.85,14.91 -3.48,19.68 -4.16,24.85 -0.84,6.52 0.87,27 0.9,28s-2.73,1.22 -2.32,3.13 -2.54,1.22 -2.86,3.34 5,1.78 4.56,5.62c10,8.17 20.19,-2.27 26.69,-14.53s-2.53,-16.88 -2.92,-46.59C232.41,403.7 232.55,372.76 234.23,359.62ZM15.71,444.62c0.27,-5.4 2.25,-7.31 3.25,-7.93a0.42,0.42 0,0 1,0.65 0.32l2.24,18.34S15.34,451.94 15.71,444.66ZM216,455.18l2.24,-18.35a0.43,0.43 0,0 1,0.65 -0.32c1,0.63 3,2.54 3.25,7.94C222.47,451.72 216,455.18 216,455.18Z"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M155.63,67.84S161.73,19 119,18.79h-0.26C76.06,19 83,68.1 83,68.1c1,9 1.92,13 5.76,27 0,0 -0.44,13.26 3.66,17.53s18.13,12.62 26.36,12.78v0H119v0c8.22,-0.16 22.3,-8.56 26.36,-12.78s4.09,-17.06 4.09,-17.06C152.1,90.1 153.06,86.1 155.63,67.84Z"
-        android:strokeAlpha="0.4"
-        android:fillAlpha="0.4"/>
-  </group>
   <path
-      android:name="Skin"
+      android:name="Skin2"
       android:pathData="M153,92c6.4,2.13 13.3,-31 3.7,-27.73"
       android:fillColor="#F9B77D"/>
   <path
-      android:name="Skin"
+      android:name="Skin3"
       android:pathData="M82.69,64.7c-9.59,-3.27 -3,28.86 3.41,26.73"
       android:fillColor="#F9B77D"/>
   <path
-      android:name="Skin"
+      android:name="Skin4"
       android:pathData="M157.65,64.73s6.37,-48.84 -38.12,-49h-0.27C74.77,15.89 82,65 82,65c1,9 5.55,40.26 9.82,44.53s18.89,12.61 27.46,12.78h0.27c8.57,-0.17 23.23,-8.56 27.46,-12.78S155,83 157.65,64.73Z"
       android:fillColor="#F9B77D"/>
-  <group>
-    <clip-path
-        android:pathData="M157.65,64.73s6.37,-48.84 -38.12,-49h-0.27C74.77,15.89 82,65 82,65c1,9 5.55,40.26 9.82,44.53s18.89,12.61 27.46,12.78h0.27c8.57,-0.17 23.23,-8.56 27.46,-12.78S155,83 157.65,64.73Z"/>
     <path
         android:pathData="M155.52,80.33c-27.93,0.28 -29.79,-9.13 -35.76,-9.13s-9.25,7.31 -36.47,9.15C82.14,115 92.54,129 120.12,129.55 141.42,130 159.1,111 155.52,80.33Z"
         android:fillColor="#bbe4fa"/>
@@ -80,7 +68,7 @@
         android:pathData="M84,79.88C78.77,40.24 75.65,32.64 96,14c12,-11 23,-7 30,-11 0,3 1,4 0,9 5,-8 8,-4 11,-10 2,5 2,8 0,11 4,-3 8.35,-7.13 11.34,-8.62 -3.74,7.48 -1.5,11.69 8.23,20.66s1.49,60.83 -6,63.82c-1.49,-9.73 5,-24.5 -8.22,-36.89C136,46 133,54 135,63c-11,-5 -16.09,-12.09 -22,-18s-10.45,2.54 -7,11c-6.73,-6 -7.77,-9.27 -8.52,-16C96.72,52 84,79.88 84,79.88Z"
         android:strokeAlpha="0.2"
         android:fillAlpha="0.2"/>
-  </group>
+
   <path
       android:name="Hair"
       android:pathData="M84,79.88C78.77,40.24 75.65,30.64 96,12c12,-11 23,-7 30,-11 0,3 1,4 0,9 5,-8 8,-4 11,-10 2,5 2,8 0,11 4,-3 8.35,-7.13 11.34,-8.62 -3.74,7.48 -1.5,11.69 8.23,20.66s1.49,62.83 -6,65.82c-1.49,-9.73 5,-26.5 -8.22,-38.89C136,44 133,52 135,61c-11,-5 -16.09,-12.09 -22,-18s-10.45,2.54 -7,11c-6.73,-6 -7.77,-9.27 -8.52,-16C96.72,50 84,79.88 84,79.88Z"
@@ -88,11 +76,8 @@
   <path
       android:pathData="M112.92,68.39c0,-6.54 -16.64,-7.82 -19.37,0C95.89,72.94 112.91,72.47 112.92,68.39Z"
       android:fillColor="#f2f2f2"/>
-  <group>
-    <clip-path
-        android:pathData="M112.92,68.39c0,-6.54 -16.64,-7.82 -19.37,0C95.89,72.94 112.91,72.47 112.92,68.39Z"/>
-    <path
-        android:name="Eye"
+ <path
+        android:name="Eye1"
         android:pathData="M104.15,68.07m-3.88,0a3.88,3.88 0,1 1,7.76 0a3.88,3.88 0,1 1,-7.76 0"
         android:fillColor="#2D02EB"/>
     <path
@@ -103,26 +88,14 @@
         android:fillColor="#f2f2f2"/>
     <path
         android:fillColor="#FF000000"
-        android:pathData="M93.55,70.3c2,-6.88 13.41,-8.45 19.83,-3s-0.46,-6.09 -0.46,-6.09S95.16,57.11 93.55,63 93.55,70.3 93.55,70.3Z"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M93.93,70.82c2,-6.89 13.41,-8.45 19.83,-3s-0.46,-6.1 -0.46,-6.1 -17.76,-4.11 -19.37,1.78S93.93,70.82 93.93,70.82Z"
-        android:strokeAlpha="0.3"
-        android:fillAlpha="0.3"/>
-    <path
-        android:fillColor="#FF000000"
         android:pathData="M91.88,68.19c5.1,4.07 22.4,5.29 21,-2.22 -1.55,-8.59 1.54,3.55 1.54,3.55s-9,6.9 -13.65,5.14S91.88,68.19 91.88,68.19Z"
         android:strokeAlpha="0.1"
         android:fillAlpha="0.1"/>
-  </group>
   <path
       android:pathData="M124.85,68.39c0,-6.54 16.64,-7.82 19.38,0C141.89,72.94 124.86,72.47 124.85,68.39Z"
       android:fillColor="#f2f2f2"/>
-  <group>
-    <clip-path
-        android:pathData="M124.85,68.39c0,-6.54 16.64,-7.82 19.38,0C141.89,72.94 124.86,72.47 124.85,68.39Z"/>
-    <path
-        android:name="Eye"
+ <path
+        android:name="Eye2"
         android:pathData="M133.62,68.07m-3.88,0a3.88,3.88 0,1 1,7.76 0a3.88,3.88 0,1 1,-7.76 0"
         android:fillColor="#2D02EB"/>
     <path
@@ -131,20 +104,12 @@
     <path
         android:pathData="M134.9,66.21m-0.73,0a0.73,0.73 0,1 1,1.46 0a0.73,0.73 0,1 1,-1.46 0"
         android:fillColor="#f2f2f2"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M144.23,70.3c-2,-6.88 -13.41,-8.45 -19.84,-3s0.46,-6.09 0.46,-6.09 17.76,-4.11 19.38,1.78S144.23,70.3 144.23,70.3Z"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M143.85,70.82c-2,-6.89 -13.41,-8.45 -19.84,-3s0.46,-6.1 0.46,-6.1 17.76,-4.11 19.38,1.78S143.85,70.82 143.85,70.82Z"
-        android:strokeAlpha="0.3"
-        android:fillAlpha="0.3"/>
+
     <path
         android:fillColor="#FF000000"
         android:pathData="M145.9,68.19c-5.1,4.07 -22.41,5.29 -21.05,-2.22 1.56,-8.59 -1.53,3.55 -1.53,3.55s9,6.9 13.65,5.14S145.9,68.19 145.9,68.19Z"
         android:strokeAlpha="0.1"
         android:fillAlpha="0.1"/>
-  </group>
   <path
       android:pathData="M194.86,212.3c-11.27,28 -27.2,44.16 -73,26.87"
       android:strokeAlpha="0.5"
@@ -214,17 +179,4 @@
       android:name="Body"
       android:pathData="M64.46,145.9C40.34,149.58 4,151 6.54,226.5c4.73,-5.42 33.8,18.5 38.9,16.11S40.87,452.1 40.87,452.1l155.58,14s-9.67,-225.87 -4.57,-223.49 28.35,-17.68 39.86,-16.11c3.85,-76.34 -41,-79.54 -61,-81.68 -11.28,3.77 -24.38,10.91 -42.29,14.12a49.36,49.36 0,0 1,-19.11 -0.34C95.58,155.66 74,149.09 64.46,145.9Z"
       android:fillColor="#FF0400"/>
-  <path
-      android:pathData="M119.76,217.05c6.82,0.95 26.55,-43.35 33.22,-83.69"
-      android:strokeWidth="0.25"
-      android:fillColor="#00000000"
-      android:strokeColor="#808080"/>
-  <path
-      android:pathData="M126,218.94a11.87,11.87 0,0 0,-11.46 -3.08h0l-4.64,17.26h0a13.41,13.41 0,0 0,11.46 3.08h0ZM119.79,216.72a0.83,0.83 0,0 1,1.07 0.47,0.83 0.83,0 0,1 -1.54,0.6A0.83,0.83 0,0 1,119.83 216.72Z"
-      android:fillColor="#e6e6e6"/>
-  <path
-      android:pathData="M86,132.38c1.33,37.66 26.91,83.73 33.73,84.67"
-      android:strokeWidth="0.25"
-      android:fillColor="#00000000"
-      android:strokeColor="#808080"/>
 </vector>
