--- a/app/src/main/res/layout-sw600dp/bulletinboard.xml
+++ b/app/src/main/res/layout-sw600dp/bulletinboard.xml
@@ -68,8 +68,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/requestConsultationButton"
-                app:postData="@{viewModel.postList.data}"
-                app:spanCount="3">>
+                app:postData="@{viewModel.postList}"
+                app:spanCount="3">
 
             </androidx.recyclerview.widget.RecyclerView>
 
