--- a/app/src/main/res/layout/backpack.xml
+++ b/app/src/main/res/layout/backpack.xml
@@ -91,7 +91,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linLayout"
-            app:postData="@{postViewModel.postList.data}"
+            app:postData="@{postViewModel.postList}"
             app:spanCount="2">
 
         </androidx.recyclerview.widget.RecyclerView>
