Knop "verwijderen" doel niet meer zichtbaar als doel behaald is.

--- a/app/src/main/res/layout/skyscraper_goaldetails.xml
+++ b/app/src/main/res/layout/skyscraper_goaldetails.xml
@@ -142,7 +142,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
                     android:layout_weight="1"
-                    android:text="@string/verwijder" />
+                    android:text="@string/verwijder"
+                    android:visibility="@{goalDetail? View.GONE : View.VISIBLE}"/>
 
             </LinearLayout>
 
