--- a/app/src/main/res/layout/billboard_goal.xml
+++ b/app/src/main/res/layout/billboard_goal.xml
@@ -5,6 +5,10 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="android.view.View" />
+        <variable
+            name="user"
+            type="String"/>
         <variable
             name="property"
             type="com.example.faithandroid.models.GoalPost" />
@@ -39,7 +43,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="7dp"
                     android:layout_marginBottom="4dp"
-                    android:text="@{property.name}"
+                    android:text="@{ property.firstname+ ` ` +property.name }"
                     app:layout_constraintBottom_toTopOf="@id/cardprofile"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -68,14 +72,15 @@
                     android:clickable="true"
                     app:maxImageSize="100dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:visibility="@{property.firstname + ' ' + property.name  != user ? View.GONE : View.VISIBLE }"/>
 
                 <TextView
                     android:id="@+id/titleGoal"
-                    android:layout_width="239dp"
-                    android:layout_height="27dp"
+                    android:layout_width="240dp"
+                    android:layout_height="34dp"
                     android:layout_marginStart="10dp"
-                    android:text="@{property.title}"
+                    android:text="@{property.title + ' '+ user                }"
                     android:textSize="25dp"
                     android:textStyle="bold"
                     app:flow_horizontalAlign="center"
