--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -124,13 +124,7 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"/>
-        <action
-            android:id="@+id/action_homeFragment_to_cinemaFragment"
-            app:destination="@id/cinemaFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+
         <action
             android:id="@+id/action_homeFragment_to_musicRoomFragment"
             app:destination="@id/musicRoomFragment"
@@ -231,11 +225,7 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
-    <fragment
-        android:id="@+id/cinemaFragment"
-        android:name="com.example.faithandroid.cinema.CinemaFragment"
-        android:label="CinemaFragment"
-        tools:layout="@layout/cinema"/>
+
     <fragment
         android:id="@+id/musicRoomFragment"
         android:name="com.example.faithandroid.musicRoom.MusicRoomFragment"
@@ -254,19 +244,19 @@
         <action
             android:id="@+id/action_skyscraperFragment_to_addGoalFragment"
             app:destination="@id/addGoalFragment"
-            app:popUpToInclusive="true"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_skyscraperFragment_to_goalDetailsFragment"
             app:destination="@id/goalDetailsFragment"
-            app:popUpToInclusive="true"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_skyscraperFragment_to_homeFragment"
             app:destination="@id/homeFragment"
@@ -312,6 +302,16 @@
         <argument
             android:name="goal"
             app:argType="com.example.faithandroid.models.GoalPost" />
+        <action
+            android:id="@+id/action_goalDetailsFragment_to_skyscraperFragment"
+            app:destination="@id/skyscraperFragment"
+            app:popUpTo="@id/skyscraperFragment"
+            app:popUpToInclusive="true"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+
     </fragment>
     <fragment
         android:id="@+id/profielFragment"
