--- a/app/src/main/res/layout-land/add_photo.xml
+++ b/app/src/main/res/layout-land/add_photo.xml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"></import>
-        <variable
-            name="videoGekozen"
-            type="Boolean" />
         <variable
             name="viewModel"
             type="com.example.faithandroid.post.PostViewModel" />
     </data>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-        <FrameLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <include
-                layout="@layout/app_bar_back"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+        <include
+            layout="@layout/app_bar_back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -35,8 +32,9 @@
                 android:orientation="vertical"
                 android:layout_marginTop="?attr/actionBarSize">
 
+
                 <LinearLayout
-                    android:id="@+id/linearLayout2"
+                    android:id="@+id/linLay1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -46,94 +44,93 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-                    <ImageView
-                        android:id="@+id/videocam"
-                        android:layout_width="76dp"
-                        android:layout_height="63dp"
-
-                        android:contentDescription="@string/app_name"
-                        android:onClick="ClickBack"
-                        app:srcCompat="@drawable/ic_videocam" />
 
                     <ImageView
-                        android:id="@+id/album"
+                        android:id="@+id/iconPhoto"
                         android:layout_width="76dp"
-                        android:layout_height="63dp"
-                        android:contentDescription="@string/app_name"
-                        android:onClick="ClickBack"
-                        app:srcCompat="@drawable/ic_video_library"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center_vertical"
+                        android:contentDescription="@string/camera"
+                        app:srcCompat="@drawable/ic_camera" />
 
-                        />
+                    <ImageView
+                        android:id="@+id/IconFolder"
+                        android:layout_width="76dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center_vertical"
+                        android:contentDescription="@string/camerafolder"
+                        app:srcCompat="@drawable/ic_folder" />
+
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
-                        android:hint="@string/hint_text">
+
+
+                        android:layout_marginLeft="10dp"
+                        android:hint="@string/plaatsen">
 
                         <AutoCompleteTextView
-                            android:id="@+id/filled_exposed_dropdown"
+                            android:id="@+id/dropdownPlaatsen"
+
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="none" />
+                            android:layout_height="match_parent"
+                            android:inputType="none"
+                            android:textColorHint="#FFFFFF" />
+
 
                     </com.google.android.material.textfield.TextInputLayout>
 
 
                 </LinearLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/titelVeld"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="8dp"
-                    android:hint="vul hier je titel in:"
-                    android:visibility="gone"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/titel"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/titleFieldImage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:singleLine="true" />
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="8dp"
+                        android:hint="@string/vul_hier_je_titel_in"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/linLay1">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/titelImage"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true" />
 
 
-                </com.google.android.material.textfield.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="405dp"
-                    android:layout_height="455dp"
-                    android:layout_marginTop="16dp"
+                    android:id="@+id/addImageRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     app:filteredPostData="@{viewModel.postList}"
                     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/titelVeld"
-                    app:spanCount="2">
-
-                </androidx.recyclerview.widget.RecyclerView>
+                    app:layout_constraintTop_toBottomOf="@+id/titleFieldImage"
+                    app:spanCount="4"></androidx.recyclerview.widget.RecyclerView>
 
                 <Button
-                    android:id="@+id/videoToevoegenButton"
+                    android:id="@+id/fotoToevoegenButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="@string/nieuwe_post_toevoegen"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+                    app:layout_constraintTop_toBottomOf="@+id/addImageRecyclerView" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
         </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
-
-
-
-
