--- a/app/src/main/res/layout/add_photo.xml
+++ b/app/src/main/res/layout/add_photo.xml
@@ -114,7 +114,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/titleFieldImage"
-                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager">
+                        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager">
                 </androidx.recyclerview.widget.RecyclerView>
 
                 <Button
