--- a/app/src/main/res/layout-land/add_photo.xml
+++ b/app/src/main/res/layout-land/add_photo.xml
@@ -48,14 +48,16 @@
                     <ImageView
                         android:id="@+id/iconPhoto"
                         android:layout_width="76dp"
-                        android:layout_height="63dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center_vertical"
                         android:contentDescription="@string/camera"
                         app:srcCompat="@drawable/ic_camera" />
 
                     <ImageView
                         android:id="@+id/IconFolder"
                         android:layout_width="76dp"
-                        android:layout_height="63dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center_vertical"
                         android:contentDescription="@string/camerafolder"
                         app:srcCompat="@drawable/ic_folder" />
 
@@ -73,7 +75,7 @@
                             android:id="@+id/dropdownPlaatsen"
 
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:inputType="none"
                             android:textColorHint="#FFFFFF" />
 
@@ -105,17 +107,16 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/addImageRecyclerView"
-                        android:layout_width="405dp"
-                        android:layout_height="455dp"
-                        app:filteredPostData="@{viewModel.filteredPostList}"
-                        app:spanCount="2"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/titleFieldImage"
-                        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager">
-                </androidx.recyclerview.widget.RecyclerView>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/addImageRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:filteredPostData="@{viewModel.postList}"
+                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/titleFieldImage"
+                    app:spanCount="4"></androidx.recyclerview.widget.RecyclerView>
 
                 <Button
                     android:id="@+id/fotoToevoegenButton"
