--- a/app/src/main/res/layout-land/add_text.xml
+++ b/app/src/main/res/layout-land/add_text.xml
@@ -80,7 +80,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="10dp"
-                    app:filteredPostData="@{viewModel.postList}"
+                    app:filteredPostData="@{viewModel.postList.data}"
                     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
