--- a/app/src/main/res/layout-land/add_video.xml
+++ b/app/src/main/res/layout-land/add_video.xml
@@ -110,7 +110,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    app:filteredPostData="@{viewModel.postList}"
+                    app:filteredPostData="@{viewModel.postList.data}"
                     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
