--- a/app/src/main/res/layout-land/audio_toevoegen.xml
+++ b/app/src/main/res/layout-land/audio_toevoegen.xml
@@ -101,7 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    app:filteredPostData="@{viewModel.postList}"
+                    app:filteredPostData="@{viewModel.postList.data}"
                     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
