--- a/app/src/main/res/layout-sw600dp/treasurechest.xml
+++ b/app/src/main/res/layout-sw600dp/treasurechest.xml
@@ -64,7 +64,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:postData="@{viewModel.postList}">
+            app:postData="@{viewModel.postList.data}">
 
         </androidx.recyclerview.widget.RecyclerView>
 
