--- a/app/src/main/res/layout/billboard_goal.xml
+++ b/app/src/main/res/layout/billboard_goal.xml
@@ -71,11 +71,10 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
                     android:clickable="true"
+                    android:visibility="@{goalUser.equals(user) ? View.VISIBLE : View.GONE }"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:visibility="@{goalUser.equals(user) ? View.VISIBLE : View.GONE }"/>
                     app:maxImageSize="100dp"
                     app:srcCompat="@drawable/ic_baseline_cancel_24"
                     app:tint="@color/colorPrimary" />
